HA-updated PUT on swagger and on controllers, and I hitted formater code, trying to fix a thing
